--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="repairOptions__item">
                         <div class="repairOptions__item__img">
                             <img src="images/opt_1.jpg" alt="">
-                            <button class="more">Подробнее</button>
+                            <button href="#modal-details-1" class="more magnific">Подробнее</button>
                         </div>
                         <span>Экономичный вариант</span>
                         <button href="#modal-popup" class="button magnific"><span>Оставить заявку</span></button>
@@ -171,7 +171,7 @@
                     <div class="repairOptions__item">
                         <div class="repairOptions__item__img">
                             <img src="images/opt_2.jpg" alt="">
-                            <button class="more">Подробнее</button>
+                            <button href="#modal-details-2" class="more magnific">Подробнее</button>
                         </div>
                         <span>Оптимальный вариант</span>
                         <button href="#modal-popup" class="button magnific"><span>Оставить заявку</span></button>
@@ -180,7 +180,7 @@
                     <div class="repairOptions__item">
                         <div class="repairOptions__item__img">
                             <img src="images/opt_3.jpg" alt="">
-                            <button class="more">Подробнее</button>
+                            <button href="#modal-details-3" class="more magnific">Подробнее</button>
                         </div>
                         <span>Вариант “Люкс”</span>
                         <button href="#modal-popup" class="button magnific"><span>Оставить заявку</span></button>
@@ -532,7 +532,7 @@
 
 
         <div id="modal-popup" class="mfp-hide zoom-anim-dialog popup">
-            <p class="heading">Получите <span>бесплатны</span> предварительный расчет стоимости ремонта <span>прямо сейчас!</span></p>
+            <p class="heading">Заказать звонок</span></p>
             <form action="">
                 <span class="inputWrap inputWrap--name">
                     <input type="text" name="name" placeholder="Ваше имя">
@@ -540,8 +540,45 @@
                 <span class="inputWrap inputWrap--tel">
                     <input type="text" name="phone" placeholder="Ваш телефон">
                 </span>
+                <span class="inputWrap inputWrap--mail">
+                    <input type="text" name="mail" placeholder="Ваш E-mail">
+                </span>
                 <button class="button button--wide"><span>Получить расчет</span></button>
             </form>
+        </div>
+
+        <div id="modal-details-1" class="mfp-hide zoom-anim-dialog popup popup--details">
+            <p class="heading">Экономичный вариант</span></p>
+            <p class="subheading">Что входит в стоимость:</p>
+
+            <ul>
+                <li>Удаление старой отделки с пола, потолка, стен</li>
+                <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                <li>Окрашевание или оклеивание стен обоями</li>
+                <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+            </ul>
+        </div>
+        <div id="modal-details-2" class="mfp-hide zoom-anim-dialog popup popup--details">
+            <p class="heading">Оптимальный вариант</span></p>
+            <p class="subheading">Что входит в стоимость:</p>
+
+            <ul>
+                <li>Удаление старой отделки с пола, потолка, стен</li>
+                <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                <li>Окрашевание или оклеивание стен обоями</li>
+                <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+            </ul>
+        </div>
+        <div id="modal-details-3" class="mfp-hide zoom-anim-dialog popup popup--details">
+            <p class="heading">Вариант "Люкс"</span></p>
+            <p class="subheading">Что входит в стоимость:</p>
+
+            <ul>
+                <li>Удаление старой отделки с пола, потолка, стен</li>
+                <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                <li>Окрашевание или оклеивание стен обоями</li>
+                <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+            </ul>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
